--- a/html/form.html
+++ b/html/form.html
@@ -36,6 +36,7 @@
 <body>
     <center><div class="main"> 
         <h1> FORM </h1>
+        <h1>form 2</h1>
         <b><label> NAME</label></b>
         <input type="text" placeholder="enter your name"> 
         <br>
